--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,3 +294,13 @@ font-weight: 500;
     color: white;
     text-decoration: none;
 }
+svg{
+    width: 100%;
+    height: 25px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    fill: white;
+    z-index: 1111111;
+    
+}
