--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -36,6 +36,25 @@
         font-size: 14px;
        
     }
+    .slider .slide-text {
+        padding-left: 25px;
+    }
+    .slider-col{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .icononic{
+display: flex;
+justify-content: center;
+margin-bottom: 20px;
+    }
+    .seem .subbox {
+        margin-bottom: 20px;
+    }
+    .seem p {
+        text-align: center;
+    }
 }
 
 @media only screen and (max-width:767px) {
@@ -65,7 +84,43 @@
         font-weight: 400;
       
     }
-   
+    /* Home page */
+    .hero-section .main-panel{
+        text-align: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .hero-section .row{
+        padding: 50px 20px 150px 20px;
+    }
+    .hero-section h1 {
+        font-size: 40px;
+        line-height: 50px;
+    }
+    .hero-section h3 {
+        font-size: 25px;
+        line-height: 20px;
+        margin-bottom: 20px;
+    }
+    .hero-section p {
+        font-size: 16px;
+    }
+    .slider .slide-text {
+        padding-left: 20px;
+        margin-top: 30px;
+    }
+    .pattern .slide-text {
+display: flex;
+justify-content:center;
+align-items: center;
+flex-direction: column;
+    }
+    .pattern p {
+       text-align: center;
+    }
+  
 }
 @media only screen and (max-width:575px) {
     .navbar-dark .navbar-nav .nav-item:hover::after{
@@ -76,4 +131,17 @@
     
     
     }
+}
+
+@media only screen and (max-width:470px) {
+   .hero-section .btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+   }
+   .me-4 {
+    margin-right: 0px!important;
+}
 }
