--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -36,6 +36,18 @@
         font-size: 14px;
        
     }
+    .hero-section h1 {
+        font-size: 45px;
+        line-height: 40px;
+    }
+    .hero-section h3 {
+        font-size: 36px;
+        line-height: 47px;
+    }
+    .hero-section p {
+        font-size: 18px;
+        line-height: 24px;
+    }
     .slider .slide-text {
         padding-left: 25px;
     }
@@ -53,8 +65,9 @@ margin-bottom: 20px;
         margin-bottom: 20px;
     }
     .seem p {
-        text-align: center;
+        text-align: start;
     }
+   
 }
 
 @media only screen and (max-width:767px) {
@@ -101,7 +114,7 @@ margin-bottom: 20px;
     }
     .hero-section h3 {
         font-size: 25px;
-        line-height: 20px;
+        line-height: 32px;
         margin-bottom: 20px;
     }
     .hero-section p {
@@ -131,6 +144,9 @@ flex-direction: column;
     
     
     }
+    .hero-section .play-btn{
+        width: 50px;
+    }
 }
 
 @media only screen and (max-width:470px) {
@@ -143,5 +159,6 @@ flex-direction: column;
    }
    .me-4 {
     margin-right: 0px!important;
+    margin-bottom: 15px;
 }
 }
